# pr-tracker

./: .build.yml  .editorconfig  .gitignore  Cargo.toml  Makefile  NEWS  README  README.license  build.rs  deny.toml  shell.nix
.github/workflows/: build.yaml
src/: branches.rs  github.rs  main.rs  merge_commit.graphql  nixpkgs.rs  ogmeta.rs  pr_info.graphql  systemd.rs  tree.rs
templates/: ogmeta.html  page.html  tree.html
